--- a/app.html
+++ b/app.html
@@ -61,8 +61,7 @@
         }
 
         .myklass2.oview-data-block > .oview-folder > .oview-folder-header {
-            /* will apply to the overall entry block
-               notice the rule definition does not seperated lass names with a space */
+            /* will apply to just the top-most title in an entry */
             color : #14a5f9 !important;
             padding-top : 10px !important;
             background-color : #CCCCCC;
@@ -90,8 +89,8 @@
             padding-top : 0px !important;
         }
         .my-css-klass .oview-folder-header {
-            /* will apply to the sub-objects 
-            padding-top : 5px !important;*/
+            /* will apply to the sub-objects */
+            padding-top : 5px !important;
         }
     </style>
 </head>
